--- a/build.gradle
+++ b/build.gradle
@@ -9,3 +9,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.jraska.vsb.or1.Program'
+    }
+}
