--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
 language: java
+
+notifications:
+  email:
+    recipients:
+      - josef.raska@gmail.com
+    on_success: change
+    on_failure: always
