--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,4 @@ language: java
 
 notifications:
   email:
-    recipients:
-      - josef.raska@gmail.com
-    on_success: change
-    on_failure: always
+    false
