--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile "org.mockito:mockito-core:1.+"
 }
 
 jar {
