--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ crashlytics.properties
 crashlytics-build.properties
 Status API Training Shop Blog About
 © 2014 GitHub, Inc. Terms Privacy Security Contact
+
+.gradle
