Specify Jacoco version

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ jar {
     }
 }
 
+jacoco {
+    version = '0.7.5.201505241946'
+}
+
 jacocoTestReport {
     reports {
         xml.enabled = true
